# isenos

./: .gitignore  CMakeLists.txt  Makefile  linker.ld
docs/: MEMORY_MANAGEMENT.md  TODO.md
src/: isenos.h  main.c  main.h  print.c  print.h
src/acpi/: acpi.c  acpi.h
src/common/: math.c  math.h  memory.c  memory.h  msr.c  msr.h  os-config.h  os-types.h  ports.c  ports.h  string.c  string.h  strings.c  strings.h  utils.c  utils.h
src/console/: console_manager.c  console_manager.h
src/disk/: disk.c  disk.h
src/gdt/: gdt.c  gdt.h  gdt_asm.asm
src/graphics/: graphics_manager.c  graphics_manager.h  text_output_manager.c  text_output_manager.h
src/idt/: idt.c  idt.h  interrupt_wrapper.asm
src/interrupts/: apic.c  apic.h  interrupts.c  interrupts.h  pic.c  pic.h
src/keyboard/: keyboard.c  keyboard.h
src/macros/: macros.c  macros.h
src/memory/: efi_memory_types.h  kernel_memory_information.c  kernel_memory_information.h  memory_tools.c  memory_tools.h
src/memory/memory_allocation/: memory_allocation.c  memory_allocation.h
src/memory/page_allocation/: page_allocation_manager.c  page_allocation_manager.h  page_allocation_manager_allocation.h
src/memory/physical_ram/: physical_ram_manager.c  physical_ram_manager.h  physical_ram_range.h
src/memory/ram_allocation/: ram_allocation_manager.c  ram_allocation_manager.h  ram_allocation_manager_allocation.h
src/pit/: pit.c  pit.h
src/programs/: colorscroll.c  colorscroll.h  donut.c  donut.h  matrix.c  matrix.h  sysinfo.c  sysinfo.h
src/scheduler/: scheduler.c  scheduler.h
tools/: build_isr_python.py
(+5 files in other folders)
